Alteração das formatações de Strings